refactor: Update API URL to use Azure container for backend

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -218,12 +218,12 @@
                                     <div class="header-right text-right w-100" *ngIf="isCompanyy">
 
                                         <button type="button" class="btn btn-success rounded-pill" [disabled]="!paypalExist || paymentDone" data-toggle="modal" data-target="#companyPayment"><i class="bx bx-money"></i> Paiement</button>
-                                        <small style="color: red;"*ngIf="!paypalExist"><i class="bx bx-error-circle" ></i>Ajoutez d'abord votre compte paypal dans votre profil</small>
+                                        <br><small style="color: red;"*ngIf="!paypalExist && !paymentDone"><i class="bx bx-error-circle" ></i>Ajoutez d'abord votre compte paypal dans votre profil</small>
                                         <div *ngIf="paymentDone"><small style="color: green;"><i class="bx bx-check-circle"></i></small><small style="color: green;">Paiement effectué !</small></div>
 
                                     </div>
                                     <div class="header-right text-right w-100" *ngIf="!isCompanyy">
-                                        <button type="button" class="btn btn-warning rounded-pill" *ngIf="paymentDone" data-toggle="modal" style="margin-right: 10px;" data-target="#feedbackModal"><i class="bx bx-happy"></i>Avis</button>
+                                        <button type="button" class="btn btn-warning rounded-pill" *ngIf="loadingAvis && paymentDone  " data-toggle="modal" style="margin-right: 10px;" data-target="#feedbackModal"><i class="bx bx-happy"></i>Avis</button>
 
                                         <button type="button" class="btn btn-success rounded-pill"  data-toggle="modal" data-target="#clientPayment" [disabled]="!amount || paymentDone"><i class="bx bx-money" ></i> Paiement</button>
                                         <div *ngIf="!amount"><small><i class="bx bx-error-circle"></i></small><small >L'entreprise doit d'abord autoriser le paiement</small></div>
