--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -40,6 +40,7 @@
                                 </div>
                             </div>
                             <p class="mb-0">Pas de compte? <a href="/register">S'inscrire</a></p>
+                            <p class="mb-0"><a href="/reset-password">Mot de passe oublié ? </a></p>
                         </form>
                     </div>
                 </div>
