--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -28,12 +28,13 @@
 
                         <div class="col-lg-7 p-0">
                             <div class="forgot-password-form">
-                                <h2>Récupérez votre mot de passe</h2>
-                                <p class="mb-0">Veuillez indiquer l'adresse électronique que vous avez utilisée lors de la création de votre compte Assistline.</p>
-
+                                <h2 *ngIf="!emailSent" >Récupérez votre mot de passe</h2>
+                                <p class="mb-0" *ngIf="!emailSent" >Veuillez indiquer l'adresse électronique que vous avez utilisée lors de la création de votre compte Assistline.</p>
+                                <h2 *ngIf="emailSent" >Email envoyé!</h2>
+                                <p  *ngIf="emailSent"  class="mb-0">si l'adresse électronique saisie existe, nous enverrons un lien de réinitialisation du mot de passe</p>
                                 <form [formGroup]="resetPasswordForm" >
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" name="name" formControlName="email" placeholder="Adresse e-mail">
+                                    <div class="form-group" [hidden]="emailSent">
+                                        <input type="email" class="form-control" name="name" formControlName="email" placeholder="Adresse e-mail" >
                                         <span class="label-title"><i class='bx bx-envelope'></i></span>
                                         <div *ngIf="email?.invalid && email?.touched">
                                             <small class="error" *ngIf="email?.errors?.['required']" style="color: red;">L'email est requis.</small>
@@ -42,7 +43,9 @@
                                     </div>
 
 
-                                    <button type="submit" class="forgot-password-btn" (click)="onSubmit()" [disabled]="resetPasswordForm.invalid">envoyer le lien</button>
+                                    <button type="submit" class="forgot-password-btn" (click)="onSubmit()" *ngIf="!emailSent"  [disabled]="resetPasswordForm.invalid">envoyer le lien</button>
+                                    <br><a href='https://mail.google.com/'  target="_blank" rel="noopener noreferrer" *ngIf="emailSent" ><button type="button" style="margin-left: 100px; width:200px;height:50px" class="btn btn-light rounded-pill" ><img src="assets/img/icon-gmail.png" style="width: 20px;height:20px;margin-right:8px" alt="image">Ouvrir Gmail</button></a><br>
+                                    <br><a href='/login'><button type="button" class="btn btn-dark rounded-pill" *ngIf="emailSent" style="margin-left: 100px; width:200px;height:50px">Se connecter</button></a>
                                 </form>
                             </div>
                         </div>
