--- a/src/app/sidebar-admin/sidebar-admin.component.html
+++ b/src/app/sidebar-admin/sidebar-admin.component.html
@@ -17,7 +17,12 @@
                       
 
                         <ul class="sidemenu-nav-second-level">
-                            
+                            <li class="nav-item">
+                                <a href="/admin/dashboard" class="nav-link">
+                                    <span class="icon"><i class='bx bx-home-alt'></i></span>
+                                    <span class="menu-title">Dashboard</span>
+                                </a>
+                            </li>
         
                             <li class="nav-item">
                                 <a href="/admin/companies" class="nav-link">
