--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5558,7 +5558,7 @@ App Calendar CSS
   font-size: 12px;
   font-weight: 700;
 }
-
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 .calendar-container .day--disabled {
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23f9f9fa' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
