--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,18 +60,18 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-dark" style="height: 60px; background-color: darkblue;">
+<nav class="navbar navbar-expand-lg navbar-light" style="height: 70px; background-color: rgb(0, 0, 45);">
   <a class="navbar-brand" href="#" style="margin-left:25px"><h2 style="color:white;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Assistline</h2></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText" style="background-color: dark;">
     <ul class="navbar-nav ml-auto" style="margin-right: 20px;">
-      <li class="nav-item">
-        <a href="/register"><button type="button" class="btn btn-light" style="margin-right: 10px;">Créer un compte</button></a>
+      <li class="nav-item" >
+        <a href="/register" ><button type="button" class="btn" style="padding-left:15px;padding-right:15px;margin-right:20px;background-color:rgb(195, 79, 2);color:white;">Créer un compte</button></a>
       </li>
       <li class="nav-item">
-        <a href="login"><button type="button" class="btn btn-light">Se connecter</button></a>
+        <a href="login"><button type="button" class="btn" style="margin-right:30px;padding-left:25px;padding-right:25px;background-color: rgb(87, 87, 184);color:white;">Se connecter</button></a>
       </li>
     </ul>
   </div>
@@ -145,7 +145,7 @@
  
 
 
-    <!-- ======= About Us Section ======= -->
+    <!-- ======= About Us Section ======= 
     <section id="about" class="about pt-0" style="margin-top: 100px;">
       <div class="container" >
 
@@ -186,9 +186,10 @@
         </div>
 
       </div>
-    </section><!-- End About Us Section -->
+    </section> End About Us Section -->
 
     <!-- ======= Services Section ======= -->
+    <br><br>
     <section id="service" class="services pt-0">
       <div class="container" >
 
@@ -244,8 +245,8 @@
               <div class="card-img">
                 <img src="assets/img/packaging-service.jpg" alt="" class="img-fluid">
               </div>
-              <h3><a class="stretched-link">Transparence</a></h3>
-              <p>les entreprises et les clients partageront le prix ou leur budget avec tout le monde afin de s'assurer qu'il n'y a pas d'escroquerie</p>
+              <h3><a class="stretched-link">Avis</a></h3>
+              <p>les avis donnés aux entreprises sont visibles par tous afin de garantir la transparence et la qualité des services</p>
             </div>
           </div><!-- End Card Item -->
 
