--- a/src/app/list-offers-visitor/list-offers-visitor.component.html
+++ b/src/app/list-offers-visitor/list-offers-visitor.component.html
@@ -22,17 +22,66 @@
     }
     
 </style>
-</head>
+<style>
+    /* Ensure the navbar is on top of other content */
+    .navbar {
+      z-index: 1030;
+    }
 
+    /* Custom styles for the hero section */
+    #hero {
+      background-color: rgb(47, 48, 144);
+      padding: 100px 0;
+    }
+
+    /* Adjust the z-index of the hero section */
+    .hero {
+      z-index: 1;
+      position: relative;
+    }
+
+    /* Adjust the z-index of the main content */
+    main {
+      position: relative;
+      z-index: 1;
+    }
+    @media (max-width: 992px) {
+      .navbar-collapse .btn {
+        margin: 5px 0;
+        margin-left: 10px;
+      }
+      .navbar-collapse{
+        background-color: rgb(39, 39, 47);
+      
+      }
+    }
+  </style>
+</head>
+<nav class="navbar navbar-expand-lg navbar-light" style="height: 70px; background-color: rgb(0, 0, 45);">
+    <a class="navbar-brand" href="#" style="margin-left:25px"><h2 style="color:white;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Assistline</h2></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText" style="background-color: dark;">
+      <ul class="navbar-nav ml-auto" style="margin-right: 20px;">
+        <li class="nav-item" >
+          <a href="/register" ><button type="button" class="btn" style="padding-left:15px;padding-right:15px;margin-right:0px;background-color:rgb(195, 79, 2);color:white;">Créer un compte</button></a>
+        </li>
+        <li class="nav-item">
+          <a href="login"><button type="button" class="btn" style="margin-right:30px;padding-left:25px;padding-right:25px;background-color: rgb(87, 87, 184);color:white;">Se connecter</button></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 <body>
 
-  <!-- ======= Header ======= -->
+  <!-- ======= Header 
   <header style="background-color: rgb(39, 39, 80); height:70px" id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="/home" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+        Uncomment the line below if you also wish to use an image logo 
+         <img src="assets/img/logo.png" alt="">
         <h1>Assistline</h1>
       </a>
 
@@ -44,10 +93,10 @@
 
           <li><a class="get-a-quote" style="background-color: red" href="/login"> Se connecter</a></li>
         </ul>
-      </nav><!-- .navbar -->
-</div></header>
+      </nav>.navbar 
+</div></header>-->
 
-<div class="main-content d-flex flex-column" style="margin-right: 200px;margin-top:100px">
+<div class="main-content d-flex flex-column" style="margin-right: 200px;margin-top:50px">
 <br>
 <h2>Les offres</h2>
 
@@ -73,7 +122,7 @@
             </div>
             <div class="modal-body">
                 <div style="width:300px;">
-              
+        
                   <label style="margin-left:7px ; margin-bottom:-2px"><h6><b>Départ:</b></h6></label>
                  <input type="text" class="form-control inline-block" placeholder="Rechercher depart..." [(ngModel)]="departSearch" (input)="filterFields()" (emptied)="filterFields()" id="departSearch" >
                  <ul id="departSearch-suggestions" class="list-group"></ul>
@@ -81,13 +130,23 @@
                 <label style="margin-top: 10px;margin-left:7px ; margin-bottom:-2px"><h6><b>Destination:</b></h6></label>
                  <input type="text" class="form-control inline-block" placeholder="Rechercher destination..." [(ngModel)]="destinationSearch" (input)="filterFields()" (emptied)="filterFields()" id="destinationSearch">
                  <ul id="destinationSearch-suggestions" class="list-group"></ul>
+                 <label style="margin-top: 10px;margin-left:7px ; margin-bottom:-2px"><h6><b>Date départ entre:</b></h6></label><br>
 
-                
+                 <input type="date" class="form-control" style="width: 130px;display:inline-block;margin-left:10px" [(ngModel)]="departStartDate"> - <input type="date" class="form-control" [(ngModel)]="departEndDate" style="width: 130px; display:inline-block;margin-left:5px">
+
+              <br>
+              <label style="margin-top: 10px;margin-left:7px ; margin-bottom:-2px"><h6><b>Date arrivé entre:</b></h6></label><br>
+
+              <input type="date" class="form-control" style="width: 130px;display:inline-block;margin-left:10px" [(ngModel)]="destinationStartDate"> - <input type="date" class="form-control" [(ngModel)]="destinationEndDate" style="width: 130px; display:inline-block;margin-left:5px">
+
+           <br>
                 </div>
 
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" #filterClose hidden>Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="resetForm()">Réinitialiser</button>
+
                 <button type="button" class="btn btn-primary" (click)="applySmartSearch(departSearch,destinationSearch)" [disabled]="filterLoading || filterButton"><div class="spinner-border text-light" style="width:15px;height:15px;margin-right:3px" role="status" *ngIf="filterLoading" >
                     <span class="sr-only">Loading...</span>
                 </div><i class="bx bx-search-alt-2" style="margin-right: 3px;" *ngIf="!filterLoading"></i>Rechercher</button>
