--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -62,7 +62,9 @@
                     
                     <div class="user-profile-text">
                         <h3 style="color: black;">{{userProfile.name}}</h3>
-                        <span class="d-block" style="color: black;">{{userProfile.role}}</span>
+                        <span class="d-block" style="color: black;" *ngIf="userProfile.role == 'client'">{{userProfile.role}}</span>
+                        <span class="d-block" style="color: black;" *ngIf="userProfile.role == 'company'">société de déménagement</span>
+
                     </div>
                 </div>
 
@@ -116,7 +118,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="card user-info-box mb-30" *ngIf="avis" >
+                            <div class="card user-info-box mb-30" *ngIf="avis && feedbacks.length < 0">
                                 <div class="card-header d-flex justify-content-between align-items-center">
                                     <h3>Avis</h3>
                                 </div>
