--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -43,11 +43,11 @@
               </div>
               
               <div class="form-group" *ngIf="formData.role === 'company'">
-                <h6><i class="bx bxs-cloud-upload"></i> Télécharger une preuve :</h6>
+                <h6><i class="bx bxs-cloud-upload"></i> Télécharger votre KBIS :</h6>
                 <input type="file" class="form-control" name="file" (change)="onFileChange($event)" required>
               </div>
     
-              <button type="submit" class="register-btn">Sign Up</button>
+              <button type="submit" class="register-btn">S'inscrire</button>
               <br><br><div class="d-flex justify-content-center" *ngIf="loading">
                 <div class="spinner-border" role="status">
                     <span class="sr-only">Loading...</span>
