--- a/src/app/offer-list/offer-list.component.html
+++ b/src/app/offer-list/offer-list.component.html
@@ -154,7 +154,7 @@
 
         <!-- Info Modal -->
         <div class="modal fade basicModalXL" id="infoModal" role="dialog" aria-hidden="true">
-            <div class="modal-dialog modal-xl" role="document" style="width: 1000px;margin-left:350px">
+            <div class="modal-dialog modal-xl" role="document" style="width: 1000px;margin-left:350px;">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title">Itineraire</h5><div class="spinner-border text-dark" style="width:15px;height:15px; margin-left:10px" role="status" *ngIf="mapLoading" >
@@ -166,7 +166,7 @@
                     </div>
                     <div class="modal-body">
                         <!-- Display offer details -->
-                    <div id="modalMap" class="form-group" style="height: 400px; width: 100%;">
+                    <div id="modalMap" class="form-group" style="height: 520px; width: 100%;">
 
                        
                     </div>
