refactor: Add unit tests for MapService and update various components for improved functionality and styling

--- a/src/app/edit-offer/edit-offer.component.html
+++ b/src/app/edit-offer/edit-offer.component.html
@@ -6,16 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="icon" type="image/png" src="../../assets/img/favicon.png">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     
     <!-- Leaflet JavaScript -->
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     
 </head>
  <app-sidebar></app-sidebar>
 <div class="main-content d-flex flex-column">
   <app-navbar></app-navbar>
-  <br><div class="d-flex justify-content-center"><h2>Modifier Offre</h2></div><hr><br>
+  <br><div class="d-flex justify-content-center"><h2>  <i class="bx bx-edit-alt" style="margin-right: 7px;"></i>Modifier Offre</h2></div><hr><br>
 
   <div class="d-flex justify-content-center">
     <div class="card" style="width: 700px;">
