--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
-<div class="sidemenu-area">
+<div class="sidemenu-area toggle-sidemenu-area">
     <div class="sidemenu-header">
-        <a href="#" class="navbar-brand d-flex align-items-center">
+        <a href="/offers" class="navbar-brand d-flex align-items-center">
             <span>AssistLine</span>
 
         </a>
