--- a/src/app/offer-list/offer-list.component.css
+++ b/src/app/offer-list/offer-list.component.css
@@ -1,4 +1,16 @@
-.leaflet-control-container .leaflet-routing-container-hide .leaflet-bottom .leaflet-right .leaflet-routing-container{
-    display: none;
+#volume-slider, #price-slider {
+    width: 60%;
+}
+.noUi-horizontal {
+    height: 15px !important;
 }
 
+.noUi-horizontal .noUi-handle {
+    width: 28px !important;
+    height: 25px !important;
+    top: -6px !important;
+}
+
+.noUi-connect {
+    background: #3f82b8 !important;
+}
