--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,10 @@
+<style>
+    .disabled{
+        pointer-events: none;
+        opacity: 0.5;
+    }
+</style>
+
 <div class="sidemenu-area toggle-sidemenu-area">
     <div class="sidemenu-header">
         <a href="/offers" class="navbar-brand d-flex align-items-center">
@@ -36,13 +43,13 @@
                             <span class="menu-title">Les offres</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item disabled" >
                         <a href="/demandes" class="nav-link">
                             <span class="icon"><i class='bx bxs-file'></i></span>
                             <span class="menu-title">Les demandes</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item disabled">
                         <a href="/chat" class="nav-link">
                             <span class="icon"><i class='bx bx-message'></i></span>
                             <span class="menu-title">Chat</span>
