--- a/src/app/navbar-admin/navbar-admin.component.html
+++ b/src/app/navbar-admin/navbar-admin.component.html
@@ -71,7 +71,7 @@
                     
                 </li>
 
-                <li class="nav-item dropdown profile-nav-item" *ngIf="authService.isLoggedIn$ | async">
+                <li class="nav-item dropdown profile-nav-item">
                     <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <div class="menu-profile">
                             <span class="name">Bounjour! Admin</span>
@@ -103,8 +103,8 @@
                         <div class="dropdown-footer">
                             <ul class="profile-nav">
                                 <li class="nav-item">
-                                    <a href="/login" (click)="authService.logout()" class="nav-link">
-                                        <i class='bx bx-log-out'></i> <span>Logout</span>
+                                    <a  (click)="authService.logout()" class="nav-link" style="cursor:pointer">
+                                        <i class='bx bx-log-out'></i> <span>Se déconnecter</span>
                                     </a>
                                 </li>
                             </ul>
